UserController get all users update